--- a/README
+++ b/README
@@ -33,4 +33,4 @@ Samples
 An archive with sample files is available here:
       precursor_data.tar.gz_
 
-.. _precursor_data.tar.gz: http://www.cs.uni-potsdam.de/~sthiele/bioasp/downloads/samples/precursor_data.tar.gz
+.. _precursor_data.tar.gz: http://bioasp.github.io/downloads/samples/precursor_data.tar.gz
