--- a/README
+++ b/README
@@ -4,7 +4,8 @@ Installation
 You can install precursor by running::
 
 	$ pip install --user precursor
-
+	
+The executable scripts can then be found in ~/.local/bin.
 
 Usage
 =====
@@ -30,7 +31,7 @@ For more options you can ask for help as follows::
 Samples
 =======
 
-An archive with sample files is available here:
+An archive with sample files is available here::
       precursor_data.tar.gz_
 
 .. _precursor_data.tar.gz: http://bioasp.github.io/downloads/samples/precursor_data.tar.gz
